<resources>
    <string name="app_name">CoKit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="signuphere">New User? Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="intention">How do you intend to use the app:</string>
    <string name="intro">This app is called COKIT. A COVID-19 Healthcare App which records the symptoms and the over-all well-being of the user (Patient) within a 14-day isolation period. The Medical Practitioner can monitor and assess each patient in the app. He can evaluate the situation of every patient he is monitoring and give proper orders to authorities if needed.</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_there_welcome_back">HELLO THERE, WELCOME BACK!</string>
    <string name="forgot_password_">FORGOT PASSWORD</string>
    <string name="provide_account">Provide your account\'s registered email for which you want to reset your password</string>
    <string name="continuee">Continue</string>
    <string name="day">Day</string>
    <string name="symptom1">Cough (Ubo)</string>
    <string name="symptom2">Chills (Panginginig)</string>
    <string name="symptom3">Fatigue/Tiredness (Pagkapagod)</string>
    <string name="symptom4">Body Pain (Sakit ng Katawan)</string>
    <string name="symptom5">Headache (Sakit ng Ulo)</string>
    <string name="symptom6">New loss of taste or smell (Pagkawala o bawas ang panlasa o pang-amoy)</string>
    <string name="symptom7">Sore Throat (Masakit ang lalamunan)</string>
    <string name="symptom8">Congestion or runny nose (Sipon na nakabara o tumutulo)</string>
    <string name="symptom9">Diarrhea (Basa o labis ang pagdumi)</string>
    <string name="symptom10">Nausea/Vomiting (Naduduwal o nagsusuka)</string>
    <string name="am">AM</string>
    <string name="nn">NN</string>
    <string name="pm">PM</string>
    <string name="temperature">Temperature</string>
    <string name="celcius">C°</string>
    <string name="oxygen">Oxygen</string>
    <string name="percentsign">%</string>
    <string name="redflag1">Shortness of breathe or difficulty of breathing (Hirap sa paghinga)</string>
    <string name="redflag2">Persistent pain or pressure in the chest (Sakit o bigat sa dibdib na di nawawala)</string>
    <string name="redflag3">Sudden Confusion (Biglaang pagkalito)</string>
    <string name="redflag4">Inability to wake or sleep (Hindi makatulog o magising)</string>
    <string name="redflag5">Pale, grey, or bluish skin, lips, or nail beds (Pagbabago ng kulay ng balat, labi, o ng kuko)</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>

    <string name="mission">Our goal incorporates both work and talent. We strive for outstanding outcomes by assisting our clients in making distinct changes. How can we go about it? By leveraging best-in-class technology and creating a great business that is sustainable and attracts, develops, and maintains outstanding people. We want to cultivate workers who are recognized as thought leaders in the technology industry and who create cutting-edge technology.</string>
    <string name="vision">Our passion in what we do led us here. Every day, we are driven by our vision: to provide the world with the best software development services in the Philippines while caring for our people and upholding our values.</string>
    <string name="aboutcom">The Orion Tech System company is a full-service consultancy company offering convenient and less contact transaction. The company servicing clients in whole Manila and NCR bubbles. Partnering with the best doctors in the Philippines to provide professional service quality. The company are extremely committed to delivering quality advice and support from the doctors to assist the patients.</string>
    <string name="logo">Logo</string>
    <string name="one">CoKit is an app that assists users (asymptomatic or mild) in recording their symptoms and overall well-being during their isolation period. The process is typically 14 days long, as mandated by the Department of Health and the Inter-Agency Task Force against COVID-19. Using this program, the attending physician can monitor and assess his patients using smartphones, tablets, and the likes.</string>
    <string name="two">The following is a step-by-step approach for making this app completely functional:</string>
    <string name="s1">1. Sign in if you already have an account.</string>
    <string name="s2">2. Sign up if you do not have an account yet. Make sure to fill up your credentials with factual information, since this will reflect to your medical records.</string>
    <string name="s3">3. If you have an attending physician and he is also registered to our app, obtain his referral code and input it, so that you can be monitored by a medical professional.</string>
    <string name="s4">4. You are good to go! Update your data every morning, noon, and, night. Click save once you are done updating your symptoms.</string>
    <string name="s5">5. Keep in contact with your attending physician. Provide daily updates on how you are feeling.</string>
    <string name="s6">6. Follow the advice of your doctor and you will be negative in no time.</string>
    <string name="e1">Our app is for everyone, even those people who does not have an attending physician can use use it. But it is preferable if you are monitored by someone in the medical field so that they can give proper and correct assessment towards your condition.</string>
    <string name="e2">You can connect to your doctor in two ways:</string>
    <string name="e3">First, in the sign up section of the app. There is a portion where you can input the referral code/ reference code that is particularly assigned to your attending physician by our team. Ensure that you ask the code to your attending physician before you register.</string>
    <string name="e4">Second, in cases where the user already had an account prior to finding an attending physician. The code can be entered in Account Management under Profile, where you can also change your profile and enter the code issued to your attending physician.</string>
    <string name="f1">Aside from monitoring the temperature and oxygen levels in the morning, noon, and night, you should be aware of certain symptoms. The symptoms that are included in the monitoring sheet of our app that can be seen in the Home page is as follows: For common symptoms we have Coughs, Chills, Fatigue or Tiredness, Body Pain, Headache, Loss of taste and smell, Sore throat, Congestion or runny nose, Diarrhea, and Nausea or Vomiting/ While for the Red flags symptoms we have Shortness of breath or difficulty in breathing, Persistent pain or pressure in the chest, New confusion, Inability to wake or sleep, and pale, grey, or bluish skin, lips, or nail beds.</string>
    <string name="f2">If you present symptoms that are not included in the list given, it is best if you consult your attending physician about your concern. As well as if you present symptoms that are under the red flags category. Let your physician know what is your current state is, so that he can give the best course of action for your situation.</string>
    <string name="f3">In cases where you don\'t have an attending physician and you present symptoms that are not included in the list and under the red flags category, there are hotlines that can address to your queries. Go to contact doctor and find the emergency numbers of your city, or you can just contact the Department of Health or the Red Cross Philippines.</string>
    <string name="g1">The monitoring sheet is composed of the temperature and oxygen level where you will input your data 3 times a day (morning, noon, and night) and the common symptoms and the red flags symptom category that is in the form of a checklist. The monitoring sheet requires accurate and factual data from you.</string>
    <string name="g2">In the event that you have entered an incorrect data, you can always edit it by clicking the save button in the monitoring sheet once you are done updating.If the inaccurate data has been present for several days, simply notify your attending physician so that he can make a note of it and continue to provide a proper evaluation.</string>
    <string name="g3"><![CDATA[In terms of your credentials being incorrect due to unintentional error, you can edit it in the Account Management under the Profile category. Click Edit >> update your credentials >> then click Save.]]></string>
    <string name="h1">In the event that you are unable to contact your attending physician and your situation is an emergency, you can contact the emergency hotline of your city or municipality. It located in the contact doctor section under the contact details of your physician.</string>


</resources>