<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/symptom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom1"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom2"
            android:fontFamily="@font/muli" />

        <CheckBox
            android:id="@+id/symptom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom3"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom4"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom5"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom6"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom7"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom8"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom9"
            android:fontFamily="@font/muli"/>

        <CheckBox
            android:id="@+id/symptom10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom10"
            android:fontFamily="@font/muli"/>
    </LinearLayout>

</LinearLayout>