<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".Welcome">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/intention"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnPatient"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/button_patient" />

        <ImageButton
            android:id="@+id/btnDoctor"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/button_doctor" />

    </LinearLayout>
</ScrollView>